Fixed '#app' overflow applying to all 2nd children

--- a/frontend/vue-project/src/assets/main.css
+++ b/frontend/vue-project/src/assets/main.css
@@ -21,8 +21,8 @@
     height: 100dvh;
 
     /* 2nd child is the view content, we dont want to scroll with sidebar */
-    & :nth-child( 2 ) {
-        overflow: true;
+    & > :nth-child( 2 ) {
+        overflow: scroll;
     }
 }
 
